added checkstyle findbugs gitignore