@@ -4,12 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>hazelcast-enterprise-root</artifactId>
-        <groupId>com.hazelcast</groupId>
-        <version>3.7-SNAPSHOT</version>
-    </parent>
 
+    <groupId>com.hazelcast</groupId>
     <artifactId>hazelcast-enterprise-sessions</artifactId>
     <packaging>pom</packaging>
     <version>3.7-SNAPSHOT</version>
@@ -25,7 +21,14 @@
         <servlet.api.version>3.0.1</servlet.api.version>
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.12</log4j.version>
-        <main.basedir>${project.parent.basedir}</main.basedir>
+        <main.basedir>${project.basedir}</main.basedir>
+        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
+        <maven.findbugs.plugin.version>3.0.0</maven.findbugs.plugin.version>
+        <maven.checkstyle.plugin.version>2.12</maven.checkstyle.plugin.version>
+        <maven.sonar.plugin.version>2.6</maven.sonar.plugin.version>
+        <maven.jacoco.plugin.version>0.7.4.201502262128</maven.jacoco.plugin.version>
+        <license.extractor.version>1.1.3</license.extractor.version>
+        
     </properties>
 
     <licenses>
@@ -53,6 +56,11 @@
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>com.hazelcast.marketing</groupId>
+            <artifactId>hazelcast-license-extractor</artifactId>
+            <version>${license.extractor.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -92,7 +100,105 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+    <profiles>
+    <profile>
+        <id>checkstyle</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>${maven.checkstyle.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>checkstyle</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <configLocation>${main.basedir}/checkstyle/checkstyle.xml</configLocation>
+                        <suppressionsLocation>${main.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
+                        <headerLocation>${main.basedir}/checkstyle/ClassHeader.txt</headerLocation>
+                        <enableRSS>false</enableRSS>
+                        <linkXRef>true</linkXRef>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <failOnViolation>true</failOnViolation>
+                        <includeTestSourceDirectory>false</includeTestSourceDirectory>
+                        <enableRulesSummary>true</enableRulesSummary>
+                        <propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
 
+    <profile>
+        <id>findbugs</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>findbugs-maven-plugin</artifactId>
+                    <version>${maven.findbugs.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <failOnError>true</failOnError>
+                        <excludeFilterFile>${main.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
+                    </configuration>
+                </plugin>
 
+            </plugins>
+        </build>
+    </profile>
+
+    <profile>
+        <id>test-coverage</id>
+        <properties>
+            <argLine>
+                ${extraVmArgs}
+                -Xms1g -Xmx1g -XX:MaxPermSize=1024M
+                -Dhazelcast.hidensity.check.freememory=false
+                -Dhazelcast.phone.home.enabled=false
+                -Dhazelcast.mancenter.enabled=false
+                -Dhazelcast.logging.type=none
+                -Dhazelcast.test.use.network=false
+            </argLine>
+        </properties>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${maven.jacoco.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                    <configuration combine.self="override">
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <testFailureIgnore>true</testFailureIgnore>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+</profiles>
 </project>
